adjust to 7.x reality (2)