@@ -29,6 +29,7 @@ import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.test.rest.ESRestTestCase;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -475,7 +476,7 @@ public abstract class AbstractSearchableSnapshotsRestTestCase extends ESRestTest
             request.addParameter("ignore_throttled", ignoreThrottled.toString());
             RequestOptions requestOptions = RequestOptions.DEFAULT.toBuilder()
                 .setWarningsHandler(
-                    warnings -> List.of(
+                    warnings -> Collections.singletonList(
                         "[ignore_throttled] parameter is deprecated because frozen indices have been deprecated. "
                             + "Consider cold or frozen tiers in place of frozen indices."
                     ).equals(warnings) == false
